--- a/karthikdev/index.html
+++ b/karthikdev/index.html
@@ -64,12 +64,12 @@
             }
         }
 	</script>
-    <title>Kanban Board</title>
+    <title>Kanban Boards</title>
 </head>
 <body>
     <div class="container">
         <div class="kanban-heading">
-            <strong class="kanban-heading-text">Kanban Board</strong>
+            <strong class="kanban-heading-text">Kanban Boards</strong>
         </div>
         <div class="kanban-board">
             <div class="kanban-block" id="todo" ondrop="drop(event)" ondragover="allowDrop(event)">
