--- a/Kanban Board_dev/index.html
+++ b/Kanban Board_dev/index.html
@@ -3,6 +3,9 @@
 <meta charset="utf-8">
 
 <head>
+    <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
+        <script defer src="https://pyscript.net/latest/pyscript.js"></script>
+
     <link rel="stylesheet" href="./kanban.css">
     <script language="JavaScript">
 		function drag(ev) {
@@ -68,7 +71,14 @@
 	</script>
     <title>Kanban Board</title>
 </head>
+
 <body>
+    <py-script>
+        print('Hello, world! ')
+        spam = 15
+        print(spam)
+    </py-script>|
+
     <div class="container">
         <div class="kanban-heading">
             <strong class="kanban-heading-text">Kanban Board</strong>
