--- a/Kanban Board_dev/index.html
+++ b/Kanban Board_dev/index.html
@@ -76,7 +76,7 @@
     <py-script>
         print('Hello, world! ')
         spam = 15
-        print(spam)
+        print(spam + 5)
     </py-script>|
 
     <div class="container">
