--- a/Kanban Board_dev/index.html
+++ b/Kanban Board_dev/index.html
@@ -38,15 +38,15 @@
         }
 
         function saveTask(){
-            // var saveButton = document.getElementById("save-button");
-            // var editButton = document.getElementById("edit-button");
-            // if (saveButton.style.display === "none") {
-            //     saveButton.style.display = "block";
-            //     editButton.style.display = "none";
-            // } else{
-            //     saveButton.style.display = "none";
-            //     editButton.style.display = "block";
-            // }
+             var saveButton = document.getElementById("save-button");
+             var editButton = document.getElementById("edit-button");
+             if (saveButton.style.display === "none") {
+                 saveButton.style.display = "block";
+                 editButton.style.display = "none";
+             } else{
+                 saveButton.style.display = "none";
+              editButton.style.display = "block";
+            }
 
             var todo = document.getElementById("todo");
             var taskName = document.getElementById("task-name").value;
@@ -78,14 +78,14 @@
         import shutil
 
         # Paths
-        DOWNLOADS_PATH = os.path.expanduser(~\Kanban Board_dev)
+        DOWNLOADS_PATH = os.path.expanduser(\Kanban Board_dev)
         # location
         ORGANIZED_PATHS = {
             'Documents': ['.pdf', '.doc', '.docx', '.txt', '.md', '.xlsx', '.ppt'],
             'Images': ['.jpg', '.jpeg', '.gif', '.png', '.svg'],
             'Music': ['.mp3', '.wav', '.wma', '.ogg', '.flac', '.aac'],
             'Videos': ['.mp4', '.mkw', '.flv', '.mov', '.avl'],
-            'Archives': ['.zip', '.tar', '.tar.gz', '.rar', '.7z'],
+           # 'Archives': ['.zip', '.tar', '.tar.gz', '.rar', '.7z'],
         }
         def organize_downloads():
         for filename in os.listdir(DOWNLOADS_PATH):
@@ -111,10 +111,6 @@
         pass
         if __name__ == "__main__":
         organize_downloads()
-
-        print('Hello, world! ')
-        spam = 15
-        print(spam + 5)
 
     </py-script>|
 
