--- a/Kanban_Board_dev/index.html
+++ b/Kanban_Board_dev/index.html
@@ -74,10 +74,10 @@
 
 <body>
     <py-script>
-     print('Hello, world!')
-     nuberS = 15
-     print(nuberS +5)
-     print([x for x in range(nuberS)])
+            print('Hello, world!')
+            NuberName = 15
+            print(NuberName + 5)
+            print([x for x in range(NuberName)])
     </py-script>
     
     <div class="container">
