--- a/Kanban_Board_dev/index.html
+++ b/Kanban_Board_dev/index.html
@@ -78,6 +78,8 @@
             NuberName = 15
             print(NuberName + 5)
             print([x for x in range(NuberName)])
+            name = input("Please, enter your name: ")
+            print(f"Hello, {name}!")
     </py-script>
     
     <div class="container">
