--- a/Kanban_Board_dev/index.html
+++ b/Kanban_Board_dev/index.html
@@ -1,79 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="utf-8">
-
 <head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
         <script defer src="https://pyscript.net/latest/pyscript.js"></script>
+        <script src="js/main.js" type="module"></script>
 
-    <link rel="stylesheet" href="./kanban.css">
-    <script language="JavaScript">
-		function drag(ev) {
-            ev.dataTransfer.setData("text", ev.target.id);
-        }
-
-        function allowDrop(ev) {
-            ev.preventDefault();
-        }
-
-        function drop(ev) {
-            ev.preventDefault();
-            var data = ev.dataTransfer.getData("text");
-            ev.currentTarget.appendChild(document.getElementById(data));
-        }
-
-        function createTask(){
-            var x = document.getElementById("inprogress");
-            var y = document.getElementById("done");
-            var z = document.getElementById("create-new-task-block");
-            if (x.style.display === "none") {
-                x.style.display = "block";
-                y.style.display = "block";
-                z.style.display = "none";
-            } else {
-                x.style.display = "none";
-                y.style.display = "none";
-                z.style.display = "flex";
-            }
-        }
-
-        function saveTask(){
-             var saveButton = document.getElementById("save-button");
-             var editButton = document.getElementById("edit-button");
-             if (saveButton.style.display === "none") {
-                 saveButton.style.display = "block";
-                 editButton.style.display = "none";
-             } else{
-                 saveButton.style.display = "none";
-              editButton.style.display = "block";
-            }
-
-            var todo = document.getElementById("todo");
-            var taskName = document.getElementById("task-name").value;
-            todo.innerHTML += `
-            <div class="task" id="${taskName.toLowerCase().split(" ").join("")}" draggable="true" ondragstart="drag(event)">
-                <span>${taskName}</span>
-            </div>
-            `
-        }
-
-        function editTask(){
-            var saveButton = document.getElementById("save-button");
-            var editButton = document.getElementById("edit-button");
-            if (saveButton.style.display === "none") {
-                saveButton.style.display = "block";
-                editButton.style.display = "none";
-            } else{
-                saveButton.style.display = "none";
-                editButton.style.display = "block";
-            }
-        }
-	</script>
-    <title>Kanban Board</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Kanban Board</title>
+	<link rel="stylesheet" href="css/main.css">
 </head>
-
 <body>
-    <py-script>
+	<div class="kanban">
+        <py-script>
 
             print('Hello, world!')
             NuberName = 15
@@ -82,7 +22,7 @@
            
     </py-script>
     
-    <div class="container">
+   <!-- <div class="container">
         <div class="kanban-heading">
             <strong class="kanban-heading-text">Kanban Board</strong>
         </div>
@@ -143,6 +83,20 @@
                 </span>
             </div>
         </div>
-    </div>
+    </div> -->
+
+		
+             <div class="kanban__column">
+			<div class="kanban__column-title">Not Started</div>
+			<div class="kanban__items">
+				<div contenteditable class="kanban__item-input">Wash the dishes</div>
+				<div class="kanban__dropzone"></div>
+			</div>
+			<button class="kanban__add-item" type="button">+ Add</button>
+		</div> 
+	</div>
+
+
+	
 </body>
 </html>
