--- a/Kanban_Board_dev/kanban.html
+++ b/Kanban_Board_dev/kanban.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
-        <script defer src="https://pyscript.net/latest/pyscript.js"></script>
-    
+	<link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
+	<script defer src="https://pyscript.net/latest/pyscript.js"></script>
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Kanban Board</title>
 	<link rel="stylesheet" href="css/main.css">
 </head>
-<body> 
-    <py-script>
 
-            print('Hello, world!')
-            name = 15
-            print(name + 5)
-            print([x for x in range(name)])
-           
-    </py-script>
+<body>
+	<py-script>
 
-    <div class="kanban">
+		print('Hello, world!')
+		name = 15
+		print(name + 5)
+		print([x for x in range(name)])
+
+	</py-script>
+
+	<div class="kanban">
 		<!--//-->
              <div class="kanban__column">
 			<div class="kanban__column-title">Not Started</div>
@@ -29,11 +31,14 @@
 				<div class="kanban__dropzone"></div>
 			</div>
 			<button class="kanban__add-item" type="button">+ Add</button>
-		</div> 
+		</div>
 	</div>
-	<script src="js/main.js" type="module"></script>
+		<script src="./js/main.js" type="module">
+		
+		</script>
 
 
-	
+
 </body>
+
 </html>
