--- a/formating_code/Web/index.html
+++ b/formating_code/Web/index.html
@@ -1,1 +1,17 @@
 <!DOCTYPE html>
+<html lang="en">
+
+    <head>
+        <meta charset="utf-8">
+        
+        
+        <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
+        <script defer src="https://pyscript.net/latest/pyscript.js">
+
+        </script>
+        <title>Documents</title>
+        <link rel="stylesheet" href="">
+        <script src="">
+		
+		</script>
+    </head>
